--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@ minecraft_version=1.21.1
 yarn_mappings=1.21.1+build.3
 loader_version=0.16.10
 # Mod Properties
-mod_version=1.0.1
+mod_version=1.0.2
 maven_group=AsagiriBeta
-archives_base_name=ProgrammableChat
+archives_base_name=ProgrammableChat-1.21.1
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.115.1+1.21.1
